--- a/css/Project_1.css
+++ b/css/Project_1.css
@@ -26,7 +26,7 @@ img {
     border-color: firebrick;
     text-indent: 10px;
     overflow: auto;
-    background-color: antiquewhite
+    background-color: antiquewhite;
 }
 .army, .nscs {
     float: right;
